--- a/Index.html
+++ b/Index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <Title> Emre's Home Page?</Title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<html>
+<head>
+    <title>
+       Seth Duffy
+    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Linn-Benton Community College, Lbcc, 290, Cs, Computer Science, Web, Website, Development, Dev">
+    <link rel="stylesheet" type="text/css" href="style/indexStyle.css">
+    <link rel="stylesheet" type="text/css" href="style/main.css">
+</head>
+<body>
+    <h2>
+        Seth Duffy
+    </h2>
+    <p>
+        CS 290
+    </p>
+    <ul>
+        <li>
+         <a href="pages/assignments.html">Assignments.</a>
+        </li>
+
+        <li>
+            <a href="pages/contact.html">Contact.</a>
+        </li>
         
-    </head>
-    <body>
-        <h1>Emre Dogan</h1>
-        <p>CS290</p>
-        <h3>About me</h3>
-        <p>I am Emre I am 21, I spend too much time on computers and this is my pawnshop.</p>
-        <hr>
-        <h2>Assignments</h2>
-        <ul>
-        <li>assignment 0</li>
-        </ul>
-    </body>
+        <li>
+            <a href="pages/about.html">About.</a>
+        </li>
+
+    </ul>
+</body>
 </html>
